Bug fix in management : remove one column / 3 bootstrap in admin.php, remove cdn link to bootstrap js, create div class=adminContentAlign instead of using div_adminContent id already which is used by ajax, wip

--- a/management/css/style.css
+++ b/management/css/style.css
@@ -1985,6 +1985,6 @@ button:focus{
 }
 
 .adminContentAlign{
-	margin-left: 0px;
+	margin-left: 1px;
 
 }
